--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ go:
 
 sudo: false
 
+before_install:
+  - go get github.com/mattn/goveralls
+
 script:
   - $HOME/gopath/bin/goveralls  -service=travis-ci
